syntax = "proto3";

option go_package = "./proto";

package greet_service;

service GreetService {
    rpc sayHello (NoParam) returns (HelloResponse);

    rpc sayHelloServerStream (NameList) returns (stream HelloResponse);

    rpc sayHelloClientStream (stream NameList) returns (MessageList);

    rpc sayHelloBiDiStream (stream HelloRequest) returns (stream HelloResponse);
}

message NoParam {};

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}

message MessageList {
    repeated string messages = 1;
}

message NameList {
    repeated string names = 1;
}
